--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
     rel="stylesheet">
-  <script defer src="../cybercave-hostel_Comun/js/carrusel.js" ></script>
+  <script defer src="js/carrusel.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
   <script src="./js/hosteljs.js" defer></script>
   <script src="./js/submenuReservas.js" defer></script>
