--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
     rel="stylesheet">
-  <script defer src="js/carrusel.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
-  <script src="./js/hosteljs.js" defer></script>
-  <script src="./js/submenuReservas.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/hosteljs.js" defer></script>
+    <script src="js/carrusel.js" defer></script>
+    <script src="js/submenuReservas.js" defer></script>
   <!-- Título del sitio -->
   <title>Cybercave Hostel - Inicio</title>
   
