Actualizacion final (por fin)

--- a/html/condiciones.html
+++ b/html/condiciones.html
@@ -63,8 +63,8 @@
   <div class="fondoReuniones">
     <div class="texto">
       <div class="texto_Informacion">
-        <h4>cosas</h4><br>
-        TÉRMINOS Y CONDICIONES
+        <h4>TÉRMINOS Y CONDICIONES</h4><br>
+        
         <p>La utilización de los servicios o la contratación de productos del Cybercave Hostal supone la aceptación de
           las siguientes condiciones generales:</p>
         <h4>1. Condiciones Generales:</h4>
