--- a/html/servicios.html
+++ b/html/servicios.html
@@ -16,7 +16,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
     rel="stylesheet">
-    <script src="../js/submenuReservas.js" defer></script>
+    <script src="../js/servicios_menuImg.js" defer></script>
 </head>
 
 <body>
@@ -105,7 +105,7 @@
             <a href="./Reserva_Salas.html" class="boton-salas">Reservar</a>
           </div>
   
-          <div class="grid-item imagen-sala-ordenadores imagen-grid" id="imagen-grid">
+          <div class="grid-item imagen-sala-ordenadores imagen-grid transition" id="imagen-grid">
             <!--<img src="../media/ordenadores.jpg" alt="Sala ordenadores">-->
           </div> 
           <div class="grid-item texto-sala-ordenadores texto-grid">
@@ -115,22 +115,22 @@
           <div class="grid-item texto-sala-comun texto-grid">
             <p>Relájate en nuestra sala común, donde encontrarás cómodos sofás, juegos de mesa, una selección de libros y un ambiente acogedor para disfrutar de tu tiempo.</p>
           </div>
-          <div class="grid-item imagen-sala-comun imagen-grid" id="imagen-grid">
+          <div class="grid-item imagen-sala-comun imagen-grid transition" id="imagen-grid">
             <!--<img src="../media/sala_comun1-transformed.jpeg" alt="Sala comun">-->
           </div>  
           <div class="grid-item texto-cocina texto-grid ">
             <p>Cocina equipada donde puedes guardar y cocinar tus comidas.</p>
           </div>
-          <div class="grid-item imagen-cocina imagen-grid" id="imagen-grid">
+          <div class="grid-item imagen-cocina imagen-grid transition" id="imagen-grid">
             <!--<img src="../media/imagenes_propuesta/comedor.jpg" alt="Imagen cocina">-->
           </div>
-          <div class="grid-item imagen-banios imagen-grid" id="imagen-grid">
+          <div class="grid-item imagen-banios imagen-grid transition" id="imagen-grid">
             <!--<img src="../media/imagenes_propuesta/baños.jpg" alt=""> -->
           </div>  
           <div class="grid-item texto-banios texto-grid">
-            <p>Baños con todos los servicios disponibles**</p>
+            <p>Baños con todas las comodidades.</p>
           </div>
-          <div class="grid-item imagen-lavanderia imagen-grid" id="imagen-grid">
+          <div class="grid-item imagen-lavanderia imagen-grid transition" id="imagen-grid">
             <!--<img src="../media/imagenes_propuesta/lavanderia.jpg" alt="Imagen lavanderia"> -->      
           </div>
           <div class="grid-item texto-lavanderia texto-grid">
