--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           <li class="cambio-idioma">
             <label for="idioma">Seleccionar idioma</label>
             <select name="idioma" id="idioma">
-              <option value="en" selected>Inglés</option>
-              <option value="es">Español</option>
+              <option value="en" >Inglés</option>
+              <option value="es" selected>Español</option>
             </select>
           </li>
         </ul>
